se modifican iconos,texto y imagenes

--- a/index.html
+++ b/index.html
@@ -66,37 +66,50 @@
 
         <p class="my-4">
             Como técnico en redes de gas se da respuesta a situaciones de emergencia como los escapes de gas. 
-            Debiendo reaccionar rápidamente, visitando las instalaciones del cliente para diagnosticar 
-            los fallos y hacer que la zona no sea peligrosa.
+            Debiendo reaccionar rápidamente encontrando los fallos y hacer que la zona no sea peligrosa.
+            Como instalador en redes de agua potable puedo dar soluciones como fugas de agua ,mantenimiento de artefactos,
+            instalaciones nuevas de agua segun solicite cada cliente
+
         </p>
 
 
         <div class="row">
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-3">
                 <i class="fas fa-tools fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Industrial</h3>
+                <h3 class="my-3 fw-bold">MAN.Industrial</h3>
                 <p class="my-3">
                     El trabajo de mantenimiento incluye el ajuste de las conexiones, 
                     limpieza/sustitución de piezas, realizar inspecciones de rutina in situ
                      y comprobar los equipos en busca de fallos.
                 </p>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-3">
                 <i class="fas fa-fire fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Domiciliario</h3>
+                <h3 class="my-3 fw-bold">INS.GLP</h3>
                 <p class="my-3">
                     Como técnico en redes de gas,
-                     se conectan, desconectan y se ponen a prueba las tuberías. También se reparan las tuberías y las conexiones,
+                     se da soluciones a fugas de gas, bloqueo de medidores, roturas de matrices de gas.
+                      También se reparan las tuberías y las conexiones,
                       e instalan el equipo para el control de la presión del gas.
                 </p>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-3">
+                <i class="fas fa-tint fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">INS.Agua Potable</h3>
+                <p class="my-3">
+                    Como INS. SANITARIO,
+                     se conectan, desconectan y se ponen a prueba las tuberías.
+                     se intalan nuevas redes de agua,artefactos y se dan soluciones acorde a cada 
+                     cliente
+                </p>
+            </div>
+            <div class="col-12 col-md-3">
                 <i class="fas fa-lock fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Seguridad</h3>
                 <p class="my-3">
-                    En todas las actividades, como técnico en redes de gas utilizamos equipos móviles y mecánicos,
+                    En todas las actividades, como técnico utilizamos equipos móviles y mecánicos,
                      incluidos los equipos elevadores y mini excavadoras.
-                      mi trabajo está estrechamente controlado por normas y leyes.
+                      Mi trabajo está estrechamente controlado por normas y leyes.
                 </p>
             </div>
         </div>
@@ -127,7 +140,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(./assets/img/inst_gas.jpg)"></div>
+                    <div class="image-top" style="background-image: url(./assets/img/medidor.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Instalaciones de Gas</h5>
                         <p class="card-text">
@@ -144,13 +157,13 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(./assets/img/estanques.jpg)"></div>
+                    <div class="image-top" style="background-image: url(./assets/img/agua.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Instalaciones de Estanques de gas</h5>
+                        <h5 class="card-title fw-bold">Instalaciones de Agua Potable</h5>
                         <p class="card-text">
                             Contratar a un equipo tecnico especializado para el diseño, montaje y mantenimiento
-                             de una Instalación de estanques de gas es imprescindible para asegurar
-                              unos buenos resultados, una óptima amortización de la inversión y un máximo rendimiento.
+                             de redes de agua potable  es imprescindible para asegurar
+                              unos buenos resultados y un máximo rendimiento.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
