se modifican nav

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid px-lg-5">
             <a class="navbar-brand" href="#">
                 <img src="assets/img/logo.png" class="img-fluid">
@@ -26,7 +26,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-            <div class="collapse navbar-collapse" id="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Acerca de mi</a>
@@ -232,7 +232,7 @@
                     <li>Maximiliano muñoz andrades</li>
                     <li>f.nacimiento: 08/01/1994</li>
                     <li>nacionalidad: chileno</li>
-                    <li>telefono: 9612726</li>
+                    <li>telefono: 961272638</li>
                      <li>maxiandrades26@gmail.com</li>
                     </ul>
             </div>
@@ -254,6 +254,7 @@
         </div>
       </div>
     </section>
+    
 
     <footer class="bg-dark text-center text-light p-4">
         <p class="mb-0">Maximiliano Muñoz. Todos los derechos reservados.</p>
