se modifica imagenes y texto

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid px-lg-5">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,7 +49,7 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Instalador Gas  <br> sec 3
+                    Maximiliano  <br> Muñoz
                 </h1>
                 <p class="my-5">
                      Técnico en redes de gas participando en tres campos principales: mantenimiento de redes,
@@ -257,10 +256,10 @@
 
     <section id="Portafolio" class="my-1 p-1 bg-warning">
         <h2 class="display-4 fw-bold text-center my-4">Portafolio</h2>
-    <div class="row row-cols-1 row-cols-md-3 g-4"> 
-        <div class="col">
+    <div class="row row-cols-1 row-cols-md-3 g-4 "> 
+        <div class="col d-flex align-items-stretch">
           <div class="card">
-            <img src="./assets/img/agua.jpg" class="card-img-top" alt="...">
+            <img src="./assets/img/cv1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">En este desafío deberás armar tu currículum vitae utilizando HTML, donde puedes utilizar la
@@ -269,9 +268,9 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col d-flex align-items-stretch">
           <div class="card">
-            <img src="./assets/img/industrial.jpg" class="card-img-top" alt="...">
+            <img src="./assets/img/cv2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text"> Segundo desafío, construir un landing page del producto que prefieras. Para lograrlo,
@@ -280,9 +279,9 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col d-flex align-items-stretch">
           <div class="card">
-            <img src="./assets/img/medidor.jpg" class="card-img-top" alt="...">
+            <img src="./assets/img/cv3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Alineamiento con Flex</h5>
               <p class="card-text"> Posicionamiento en CSS. Para lograrlo, 
@@ -292,9 +291,9 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col d-flex align-items-stretch">
           <div class="card">
-            <img src="./assets/img/industrial.jpg" class="card-img-top" alt="...">
+            <img src="./assets/img/cv4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Bootstrap</h5>
               <p class="card-text">En este desafío validaremos nuestros conocimientos de Bootstrap. Para lograrlo,
@@ -303,9 +302,9 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col d-flex align-items-stretch">
             <div class="card">
-              <img src="./assets/img/industrial.jpg" class="card-img-top" alt="...">
+              <img src="./assets/img/cv5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Git y Github</h5>
                 <p class="card-text">En este desafío validaremos nuestros conocimientos de Github. Para lograrlo, necesitarás
@@ -314,9 +313,9 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col d-flex align-items-stretch">
             <div class="card">
-              <img src="./assets/img/industrial.jpg" class="card-img-top" alt="...">
+              <img src="./assets/img/cv6.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Git y Github</h5>
                 <p class="card-text">En este desafío validaremos nuestros conocimientos de Github. Para lograrlo, necesitarás
@@ -327,15 +326,6 @@
           </div>
       </div>
     </section>
-
-
-
-
-
-
-
-
-
 
     <footer class="bg-dark text-center text-light p-4">
         <p class="mb-0">Maximiliano Muñoz. Todos los derechos reservados.</p>
