se modifica url

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <p class="card-text">En este desafío deberás armar tu currículum vitae utilizando HTML, donde
                             puedes utilizar la
                             siguiente imagen como referencia para el desarrollo.</p>
-                        <a href="#" class="btn btn-primary">Go HTML</a>
+                        <a href="https://github.com/maxiandrades/html" class="btn btn-primary">Go HTML</a>
                     </div>
                 </div>
             </div>
@@ -287,7 +287,7 @@
                         <p class="card-text"> Segundo desafío, construir un landing page del producto que prefieras.
                             Para lograrlo,
                             necesitarás implementar CSS.</p>
-                        <a href="#" class="btn btn-primary">Go CSS</a>
+                        <a href="https://github.com/maxiandrades/css" class="btn btn-primary">Go CSS</a>
                     </div>
                 </div>
             </div>
@@ -299,7 +299,7 @@
                         <p class="card-text"> Posicionamiento en CSS. Para lograrlo,
                             necesitarás combinar lo aprendido de flex con las unidades anteriores.
                         </p>
-                        <a href="#" class="btn btn-primary">Go FLEX</a>
+                        <a href="https://github.com/maxiandrades/flex" class="btn btn-primary">Go FLEX</a>
                     </div>
                 </div>
             </div>
@@ -311,7 +311,7 @@
                         <p class="card-text">En este desafío validaremos nuestros conocimientos de Bootstrap. Para
                             lograrlo,
                             necesitarás implementar el sistema de grillas de Bootstrap.</p>
-                        <a href="#" class="btn btn-primary">Go Bootstrap</a>
+                        <a href="https://github.com/maxiandrades/bootstrap" class="btn btn-primary">Go Bootstrap</a>
                     </div>
                 </div>
             </div>
@@ -323,7 +323,7 @@
                         <p class="card-text">En este desafío validaremos nuestros conocimientos de Github. Para
                             lograrlo, necesitarás
                             aplicar las etapas del versionamiento de GIT</p>
-                        <a href="https://github.com/maxiandrades/maxiandrades.github.io" class="btn btn-primary">Go
+                        <a href="https://github.com/maxiandrades/fdsw-github" class="btn btn-primary">Go
                             GIT_GITHUB</a>
                     </div>
                 </div>
