se modifica readme,y index

--- a/index.html
+++ b/index.html
@@ -227,42 +227,44 @@
     </section>
 
     <div class="d-flex justify-content-center">
-    <button class="btn btn-primary mx-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-        aria-controls="offcanvasRight">¡Contactame!</button>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-        <div class="offcanvas-header">
-            <h5 id="offcanvasRightLabel">Datos De Personales</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <button class="btn btn-primary mx-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+            aria-controls="offcanvasRight">¡Contactame!</button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+                <h5 id="offcanvasRightLabel">Datos De Personales</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul>
+                    <li>Maximiliano muñoz andrades</li>
+                    <li>f.nacimiento: 08/01/1994</li>
+                    <li>nacionalidad: chileno</li>
+                    <li>telefono: 961272638</li>
+                    <li>maxiandrades26@gmail.com</li>
+                </ul>
+            </div>
         </div>
-        <div class="offcanvas-body">
-            <ul>
-                <li>Maximiliano muñoz andrades</li>
-                <li>f.nacimiento: 08/01/1994</li>
-                <li>nacionalidad: chileno</li>
-                <li>telefono: 961272638</li>
-                <li>maxiandrades26@gmail.com</li>
-            </ul>
+
+        <button class="btn btn-primary mx-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
+            aria-controls="offcanvasTop">Antecedentes Academicos</button>
+
+        <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+            <div class="offcanvas-header">
+                <h5 id="offcanvasTopLabel">Antecedentes Academicos</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul>
+                    <li>Educacion media:Liceo industrial superior talca</li>
+                    <li>Educacion basica:Escuela Panguilemo Edita Gallegos Rodríguez</li>
+                    <li>titulo:Tecnico nivel medio en instalaciones sanitarias</li>
+                    <li>tecnico clase 3</li>
+                </ul>
+            </div>
         </div>
     </div>
-
-    <button class="btn btn-primary mx-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
-        aria-controls="offcanvasTop">Antecedentes Academicos</button>
-
-    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
-        <div class="offcanvas-header">
-            <h5 id="offcanvasTopLabel">Antecedentes Academicos</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <ul>
-                <li>Educacion media:Liceo industrial superior talca</li>
-                <li>Educacion basica:Escuela Panguilemo Edita Gallegos Rodríguez</li>
-                <li>titulo:Tecnico nivel medio en instalaciones sanitarias</li>
-                <li>tecnico clase 3</li>
-            </ul>
-        </div>
-    </div>
-</div>
 
     <section id="Portafolio" class="my-1 p-1 bg-warning">
         <h2 class="display-4 fw-bold text-center my-4">Portafolio</h2>
