se modifica readme y index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -237,10 +237,10 @@
             </div>
             <div class="offcanvas-body">
                 <ul>
-                    <li>Maximiliano muñoz andrades</li>
-                    <li>f.nacimiento: 08/01/1994</li>
-                    <li>nacionalidad: chileno</li>
-                    <li>telefono: 961272638</li>
+                    <li>Maximiliano Muñoz Andrades</li>
+                    <li>F.nacimiento: 08/01/1994</li>
+                    <li>Nacionalidad: chileno</li>
+                    <li>Telefono: 961272638</li>
                     <li>maxiandrades26@gmail.com</li>
                 </ul>
             </div>
@@ -257,10 +257,10 @@
             </div>
             <div class="offcanvas-body">
                 <ul>
-                    <li>Educacion media:Liceo industrial superior talca</li>
-                    <li>Educacion basica:Escuela Panguilemo Edita Gallegos Rodríguez</li>
-                    <li>titulo:Tecnico nivel medio en instalaciones sanitarias</li>
-                    <li>tecnico clase 3</li>
+                    <li>Educacion media: Liceo industrial superior talca</li>
+                    <li>Educacion basica: Escuela Panguilemo Edita Gallegos Rodríguez</li>
+                    <li>Titulo: Tecnico nivel medio en instalaciones sanitarias</li>
+                    <li>Tecnico clase 3</li>
                 </ul>
             </div>
         </div>
@@ -271,7 +271,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col d-flex align-items-stretch">
                 <div class="card">
-                    <img src="./assets/img/cv1.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/cv1.jpg" class="card-img-top" alt="currículum alexis sanchez">
                     <div class="card-body">
                         <h5 class="card-title">HTML</h5>
                         <p class="card-text">En este desafío deberás armar tu currículum vitae utilizando HTML, donde
@@ -283,7 +283,7 @@
             </div>
             <div class="col d-flex align-items-stretch">
                 <div class="card">
-                    <img src="./assets/img/cv2.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/cv2.jpg" class="card-img-top" alt="Venta de Gas">
                     <div class="card-body">
                         <h5 class="card-title">CSS</h5>
                         <p class="card-text"> Segundo desafío, construir un landing page del producto que prefieras.
@@ -295,7 +295,7 @@
             </div>
             <div class="col d-flex align-items-stretch">
                 <div class="card">
-                    <img src="./assets/img/cv3.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/cv3.jpg" class="card-img-top" alt="Iguanas">
                     <div class="card-body">
                         <h5 class="card-title">Alineamiento con Flex</h5>
                         <p class="card-text"> Posicionamiento en CSS. Para lograrlo,
@@ -307,7 +307,7 @@
             </div>
             <div class="col d-flex align-items-stretch">
                 <div class="card">
-                    <img src="./assets/img/cv4.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/cv4.jpg" class="card-img-top" alt="diferentes cuppones de descuentos">
                     <div class="card-body">
                         <h5 class="card-title">Bootstrap</h5>
                         <p class="card-text">En este desafío validaremos nuestros conocimientos de Bootstrap. Para
@@ -319,7 +319,7 @@
             </div>
             <div class="col d-flex align-items-stretch">
                 <div class="card">
-                    <img src="./assets/img/cv5.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/cv5.jpg" class="card-img-top" alt="currículum">
                     <div class="card-body">
                         <h5 class="card-title">Git y Github</h5>
                         <p class="card-text">En este desafío validaremos nuestros conocimientos de Github. Para
@@ -332,7 +332,7 @@
             </div>
             <div class="col d-flex align-items-stretch">
                 <div class="card">
-                    <img src="./assets/img/cv6.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/cv6.jpg" class="card-img-top" alt="cvfinal">
                     <div class="card-body">
                         <h5 class="card-title">Git y Github</h5>
                         <p class="card-text">En este desafío validaremos nuestros conocimientos de Github. Para
